Support display:flex for 'summary'

BUG=603928
R=skobes@chromium.org, cbiesinger@chromium.org

Review-Url: https://codereview.chromium.org/2373963002
Cr-Commit-Position: refs/heads/master@{#423008}

Former-commit-id: b711bbea21e196179a525c1588004ca4f60d025d