third_party/WebKit/Source/core/html/HTMLSummaryElement.cpp
@@ -44,7 +44,12 @@ HTMLSummaryElement* HTMLSummaryElement::create(Document& document) {
 HTMLSummaryElement::HTMLSummaryElement(Document& document)
     : HTMLElement(summaryTag, document) {}
 
-LayoutObject* HTMLSummaryElement::createLayoutObject(const ComputedStyle&) {
+LayoutObject* HTMLSummaryElement::createLayoutObject(
+    const ComputedStyle& style) {
+  EDisplay display = style.display();
+  if (display == EDisplay::Flex || display == EDisplay::InlineFlex ||
+      display == EDisplay::Grid || display == EDisplay::InlineGrid)
+    return LayoutObject::createObject(this, style);
   return new LayoutBlockFlow(this);
 }
 
